Code Spell Checkerの単語を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "editor.defaultFormatter": "Prisma.prisma"
   },
   "cSpell.words": [
-    "Icones"
+    "arrbuf",
+    "Icones",
+    "OAEP",
+    "turbopack"
   ],
 }
