--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "hono": "^4.6.16",
     "next": "15.1.2",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
