--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev-api": "bun run --hot src/api/index.ts",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc --noEmit",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "hono": "^4.6.16",
     "next": "15.1.2",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
