--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.2",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "typescript": "^5",
