--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-variants": "^0.3.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
